Add UserProfile API, Create Payment url

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,19 +7,26 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-BQLCBBG\\SQLSERVER1; Database=CaterServRestaurant; Trusted_Connection=True; TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-BQLCBBG\\SQLSERVER1; Database=CaterServRestaurant_Test; Trusted_Connection=True; TrustServerCertificate=True"
   },
   "AuthJwt": {
     "Key": "ZHweGTsIRYS0WYUr4ugyKH1WhLG9Zvsr7eGTsIRYS0WYUr4u",
     "Issuer": "https://localhost:7143",
     "Audience": "https://localhost:7143",
-    "ExpiryTimeFrame": "00:01:00"
+    "ExpiryTimeFrame": "00:10:00"
   },
   "EmailOptions": {
     "From": "",
-    "Host": "smtp.ethereal.email",
+    "Host": "",
     "Port": 587,
     "Username": "",
     "Password": ""
+  },
+  "Vnpay": {
+    "ReturnUrl": "https://localhost:7143/api/payment/vnpay-return",
+    "PaymentUrl": "https://sandbox.vnpayment.vn/paymentv2/vpcpay.html",
+    "TmnCode": "",
+    "HashSecret": "",
+    "Version": "2.1.0"
   }
 }
