Upload image to Cloudinary, Update Account Api

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -17,7 +17,7 @@
   },
   "EmailOptions": {
     "From": "",
-    "Host": "",
+    "Host": "smtp.gmail.com",
     "Port": 587,
     "Username": "",
     "Password": ""
@@ -28,5 +28,11 @@
     "TmnCode": "",
     "HashSecret": "",
     "Version": "2.1.0"
+  },
+  "Cloudinary": {
+    "CloudName": "dzrnjd4jt",
+    "ApiKey": "126237441761441",
+    "ApiSecret": "b4-FTB3G1ye42mpNpVsh6GJ5jxY",
+    "Folder": "Restaurant"
   }
 }
