Change response Booking, Fix refresh token, add payment momo

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -29,6 +29,14 @@
     "HashSecret": "",
     "Version": "2.1.0"
   },
+  "Momo": {
+    "PartnerCode": "MOMO",
+    "ReturnUrl": "https://localhost:7143/api/payment/momo-return",
+    "PaymentUrl": "https://test-payment.momo.vn/v2/gateway/api/create",
+    "IpnUrl": "https://localhost:7143/payment/api/momo-ipn",
+    "AccessKey": "F8BBA842ECF85",
+    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz"
+  },
   "Cloudinary": {
     "CloudName": "dzrnjd4jt",
     "ApiKey": "126237441761441",
