--- a/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI.csproj
@@ -24,6 +24,8 @@
   <ItemGroup>
     <Folder Include="Logs\" />
     <Folder Include="Resources\Images\" />
+    <Folder Include="wwwroot\Teamplates\" />
+    <Folder Include="wwwroot\Uploads\" />
   </ItemGroup>
 
 </Project>
