--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -13,7 +13,7 @@
     "Key": "ZHweGTsIRYS0WYUr4ugyKH1WhLG9Zvsr7eGTsIRYS0WYUr4u",
     "Issuer": "https://localhost:7143",
     "Audience": "https://localhost:7143",
-    "ExpiryTimeFrame": "00:10:00"
+    "ExpiryTimeFrame": "90:10:00"
   },
   "EmailOptions": {
     "From": "",
@@ -42,5 +42,10 @@
     "ApiKey": "126237441761441",
     "ApiSecret": "b4-FTB3G1ye42mpNpVsh6GJ5jxY",
     "Folder": "Restaurant"
+  },
+  "RedisURL": "127.0.0.1:6379",
+  "Google": {
+    "ClientSecret": "",
+    "ClientId": ""
   }
 }
