--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -34,13 +34,13 @@
     "ReturnUrl": "https://localhost:7143/api/payment/momo-return",
     "PaymentUrl": "https://test-payment.momo.vn/v2/gateway/api/create",
     "IpnUrl": "https://localhost:7143/payment/api/momo-ipn",
-    "AccessKey": "F8BBA842ECF85",
-    "SecretKey": "K951B6PE1waDMi640xX08PD3vg6EkVlz"
+    "AccessKey": "",
+    "SecretKey": ""
   },
   "Cloudinary": {
-    "CloudName": "dzrnjd4jt",
-    "ApiKey": "126237441761441",
-    "ApiSecret": "b4-FTB3G1ye42mpNpVsh6GJ5jxY",
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": "",
     "Folder": "Restaurant"
   },
   "RedisURL": "127.0.0.1:6379",
